# aws-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/aws_mcp/: client.py  server.py  utils.py
src/aws_mcp/tools/: cloudwatch.py  ec2.py  iam.py  lambda_.py  rds.py  s3.py
tests/: test_cloudwatch.py  test_ec2.py  test_iam.py  test_integration.py  test_lambda_.py  test_rds.py  test_s3.py  test_utils.py
