[tool.poetry]
name = "aws-mcp"
version = "0.1.0"
description = "MCP server for AWS services — manage your cloud infrastructure through Claude"
authors = ["Firas Mosbahi"]
license = "MIT"
readme = "README.md"
packages = [{ include = "aws_mcp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
mcp = ">=1.0.0"
boto3 = ">=1.34.0"
botocore = ">=1.34.0"
click = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
boto3-stubs = { version = ">=1.34.0", extras = ["ec2", "s3", "lambda", "rds", "cloudwatch", "iam"] }

[tool.poetry.scripts]
aws-mcp = "aws_mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
